fix vertical jump of content when opening sxs

--- a/regulations/static/regulations/css/less/module/sxs.less
+++ b/regulations/static/regulations/css/less/module/sxs.less
@@ -99,6 +99,7 @@ SxS content wrapper
     min-height: 100%;
     height: 100%;
     padding: 30px 15px;
+    margin-top: -2.125em;
 }
 
 #breakaway-view.open-sxs {
